2003-09-23  Ettore Perazzoli  <ettore@ximian.com>

	* mail-component.c (add_storage): Note the new store.

	* mail-component-factory.c: Don't include "mail-callbacks.h"
	anymore.

	* em-format-html.c (em_format_html_get_type): Get the base
	directory with mail_component_peek_base_directory().
	* em-utils.c (filter_editor_response): Likewise.
	(em_utils_edit_filters): Likewise.

	* em-folder-browser.c (emfb_init): Get the search context through
	mail_component_peek_search_context().

2003-09-22  Not Zed  <NotZed@Ximian.com>

	** See bug #32996
	
	* mail-folder-cache.c (real_flush_updates): don't just pass TRUE
	to the 'can work offline' parameter of new shell folder.

	** See bug #39410
	
	* mail-ops.c (prep_offline_do): sync all messages, not just
	unread or flagged ones.

2003-09-22  Not Zed  <NotZed@Ximian.com>

	* em-popup.c (emp_uri_popup_link_copy): removed, moved to
	em-folder-view, for now, it has access to an invisible.

	* em-folder-view.c (emfv_setting_notify): honour the load_http
	setting, at least the all setting.
	(emfv_format_popup_event): setup the popup menu item for copy link
	location here.

2003-09-22  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-preferences.c (mail_preferences_construct): Connect to
	"value-changed" rather than "changed" for spin buttons.

2003-09-21  Not Zed  <NotZed@Ximian.com>

	* mail-session.c (ms_thread_msg_new): implement, we hook into the
	mail progress reporting stuff by overriding the CamelOperation
	member with one from a dummy mail_msg.
	(ms_thread_msg_free): handle freeing.

	* mail-mt.c (mail_msg_free): mute the camel-operaiton when we free
	it so we no longer get updates.

2003-09-19  Jeffrey Stedfast  <fejj@ximian.com>

	* em-message-browser.c (emmb_set_message): Set the window title to
	be that of the message subject. Fixes bug #48617.

2003-09-19  Jeffrey Stedfast  <fejj@ximian.com>

	Fix for bug #48618.

	* em-folder-view.c (emfv_list_message_selected): See if we have